--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.gmonetix.slambook"
         minSdkVersion 15
@@ -34,4 +35,5 @@ dependencies {
     compile files('libs/volley.jar')
     compile 'com.facebook.android:facebook-android-sdk:4.14.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
 }
