--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.14.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    compile files('libs/universal-image-loader-1.9.5.jar')
+    compile files('libs/gson-2.2.2.jar')
 }
