--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.gmonetix.slambook"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -37,5 +37,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.github.bloder:magic:1.1'
     testCompile 'junit:junit:4.12'
 }
