--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.github.bloder:magic:1.1'
+    compile 'com.afollestad.material-dialogs:core:0.9.3.0'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
     testCompile 'junit:junit:4.12'
 }
